# catchall-api

./: .cruft.json  .flake8  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE.md  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: tests.yaml
catchall_api/: __init__.py  api.py  log.py
tests/: conftest.py  docker-compose.yml
tests/integration/: test_api.py
tests/module/: conftest.py  test_api.py
tests/unit/: test_api.py  test_log.py
