[tool.poetry]
name = "catchall-api"
version = "1.0.1"
description = "Catchall API that echoes back requests"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["catchall_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { version = "^1.10.2", extras = ["dotenv"] }
fastapi = "^0.92.0"
requests = "^2.28.1"
coloredlogs = "^15.0.1"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
pytest-docker = "^1.0.1"
pytest-cov = "^4.0.0"
time-machine = "^2.9.0"

[tool.poetry.scripts]
catchall-api = "catchall_api.api:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages=true
explicit_package_bases=true
strict=true
show_error_codes=true

[tool.pytest.ini_options]
minversion = "6.0"
# Disable anyio to avoid conflict and force asyncio to load before entrypoints
# https://docs.pytest.org/en/6.2.x/writing_plugins.html#plugin-discovery-order-at-tool-startup
addopts = ["-p", "no:anyio", "-p", "asyncio"]
testpaths = ["tests/unit", "tests/integration", "tests/module", "tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle
    "ERA",  # flake8-eradicate
    "F",  # Pyflakes
    "G",  # flake8-logging-format
    "I",  # flake8-isort
    "N",  # pep8-naming
    "PT",  # flake8-pytest-style
    "RUF",  # ruff
    "S",  # flake8-bandit
    "W",  # pycodestyle,
]

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "validator",
    "root_validator",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
